--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>ZOTT Capstone</title>
   </head>
   <body>
-    <h1>Hello This is the home page for gary's capstone page</h1>
+    <h1>ZOTT Capstone</h1>
     <br/>
 
     <!-- Optional JavaScript -->
