--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
   <body>
     <h1>ZOTT Capstone</h1>
     <br/>
+    <a href='jj/'>JJ, Patient tech coordinator, May 24, 2018</a><br/>
+    <a href=''>JJ, Patient tech coordinator, May 24, 2018</a><br/>
+    <a href=''>JJ, Patient tech coordinator, May 24, 2018</a><br/>
+    <a href=''>JJ, Patient tech coordinator, May 24, 2018</a><br/>            
+
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
