--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>ZOTT Capstone Interviews - Pear Notes + Audio</title>
   </head>
   <body>
-    <h1>ZOTT Capstone Interview - Pear Notes + Audio</h1>
+    <h1>ZOTT Capstone Interviews - Pear Notes + Audio</h1>
     <br/>
     <a href='jj/'>JJ, Patient tech coordinator, May 24, 2018</a><br/>
     <a href='andrew/'>Andrew, Patient technologist, May 2018</a><br/>
