--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <a href='andrew/'>Andrew, Patient technologist, May 2018</a><br/>
     <a href='jessicaCLS/'>Jessica, CLS, 2018</a><br/></br>
     <a href='sangMcCall/'>Sang McCall, June, 2018</a><br/>            
+    <a href='janet/'>Janet, June, 2018</a><br/>            
 
 
 
