--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
     <a href='jj/'>JJ, Patient tech coordinator, May 24, 2018</a><br/>
     <a href='andrew/'>Andrew, Patient technologist, May 2018</a><br/>
     <a href='jessicaCLS/'>Jessica, CLS, 2018</a><br/></br>
-    <a href='sangMcCall/'>Sang McCall, June, 2018</a><br/>            
-    <a href='janet/'>Janet, June, 2018</a><br/>            
+    
+    <a href='sangMcCall/'>Sang McCall, Parent, June, 2018</a><br/>            
+    <a href='janet/'>Janet, Parent, June, 2018</a><br/>            
+    <a href='tracyBelt/'>Tracy Belt, Parent, June, 2018</a><br/>            
+
 
 
 
