--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
     <title>ZOTT Capstone Interviews - Pear Notes + Audio</title>
   </head>
   <body>
+
+      <h1>Parent survey data from Open Parent survey (no hospital context),  n=18</h1>
+      <br/>
+      <a href='https://public.tableau.com/profile/gary.de.la.cruz#!/vizhome/Ratingsfor6features-Dashboard/6FeatureRatingsDashboard'> Dashboard 1 - Ratings for 6 features broken down by child ages, n-18</a><br/>
+      <a href='https://public.tableau.com/profile/gary.de.la.cruz#!/vizhome/openSurvey1-Q2Q3-HowOften/Dashboard1'>Dashboard 2 - Parent co-viewing and co-present questions, n=18</a><br/>
+
+
+
+    <br/>
+    <br/>
+    <br/>
+
     <h1>ZOTT Capstone Interviews - Pear Notes + Audio</h1>
     <br/>
     <a href='jj/'>JJ, Patient tech coordinator, May 24, 2018</a><br/>
