--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
       <h1>Parent survey data from Open Parent survey (no hospital context),  n=18</h1>
       <br/>
-      <a href='https://public.tableau.com/profile/gary.de.la.cruz#!/vizhome/Ratingsfor6features-Dashboard/6FeatureRatingsDashboard'> Dashboard 1 - Ratings for 6 features broken down by child ages, n-18</a><br/>
+      <a href='https://public.tableau.com/profile/gary.de.la.cruz#!/vizhome/Ratingsfor6features-Dashboard/6FeatureRatingsDashboard'> Dashboard 1 - Ratings for 6 features broken down by child ages, n=18</a><br/>
       <a href='https://public.tableau.com/profile/gary.de.la.cruz#!/vizhome/openSurvey1-Q2Q3-HowOften/Dashboard1'>Dashboard 2 - Parent co-viewing and co-present questions, n=18</a><br/>
 
 
