--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
     
     <a href='sangMcCall/'>Sang McCall, Parent, June, 2018</a><br/>            
     <a href='janet/'>Janet, Parent, June, 2018</a><br/>            
-    <a href='tracyBelt/'>Tracy Belt, Parent, June, 2018</a><br/>            
+    <a href='tracyBelt/'>Tracy Belt, Parent, June, 2018</a><br/>
+  
+  <br/>
+  <br/>
+    <a href='powerbi_680_515.html'>PowerBI 680 x 515</a><br/>
 
 
 
