--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
   <br/>
   <br/>
     <a href='powerbi_680_515.html'>PowerBI 680 x 515</a><br/>
+      <a href='powerbi_800_600.html'>PowerBI 800 x 600</a><br/>
+      <a href='powerbi_933_700.html'>PowerBI 933 x 700</a><br/>
+
 
 
 
